--- a/sigavan/app/src/main/AndroidManifest.xml
+++ b/sigavan/app/src/main/AndroidManifest.xml
@@ -9,19 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity
-            android:name=".FullscreenActivity"
+            android:name=".SplashScreen"
+            android:theme="@style/Theme.AppCompat.FullVan"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PassageiroActivity"></activity>
+        <activity android:name=".PassageiroActivity" />
+        <activity android:name=".FullscreenActivity" />
     </application>
 
 </manifest>
