--- a/sigavan_version2/app/src/main/AndroidManifest.xml
+++ b/sigavan_version2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fadergs.edu.br.sigavan">
+    package="br.edu.fadergs.acworks.sigavan_version2">
 
     <application
         android:allowBackup="true"
@@ -8,20 +8,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.FullVan">
-        <activity android:name=".MainActivity" />
-
-        <activity
-            android:name=".SplashScreen"
-            android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name" >
+        android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PassageiroActivity" />
     </application>
 
 </manifest>
