--- a/sigavan/app/build.gradle
+++ b/sigavan/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:9.6.0'
     implementation 'com.firebaseui:firebase-ui-auth:0.6.0'
     implementation 'com.firebaseui:firebase-ui-database:0.6.0'
+    implementation 'com.google.firebase:firebase-messaging:9.6.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
